--- a/index.html
+++ b/index.html
@@ -42,20 +42,6 @@
               Send money home and connect with your community - all in one place
             </p>
             <form class="hero-form">
-              <div class="warning hidden">
-                <ion-icon
-                  class="warning-icon"
-                  name="warning-outline"
-                ></ion-icon>
-                <p class="warning-text"></p>
-              </div>
-              <!-- <div class="warning no-at-warn hidden">
-                <ion-icon
-                  class="warning-icon"
-                  name="warning-outline"
-                ></ion-icon>
-                <p class="warning-text">Email must contain the @ symbol!</p>
-              </div> -->
               <input
                 class="hero-email"
                 type="email"
@@ -232,13 +218,13 @@
       <div class="modal">
         <div class="modal-tittle-header">
           <div class="modal-tittle-box">
-            <ion-icon class="modal-icon" name="checkmark-outline"></ion-icon>
-            <h1 class="modal-heading">Success</h1>
+            <ion-icon class="modal-icon" name=""></ion-icon>
+            <h1 class="modal-heading"></h1>
           </div>
           <button class="close-modal">&times;</button>
         </div>
         <div class="modal-container">
-          <p>Showing sucessfully joined waitlist</p>
+          <p class="modal-text"></p>
         </div>
         <div class="modal-thanks-box">
           <button class="modal-btn">Thank You</button>
