--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Azame</title>
+    <meta
+      name="description"
+      content="Amaze is a money app, that will allows you make remittance and send money home from the diaspora. It also allow you to save and grow your money through investments"
+    />
+
+    <!-- FAVICONS -->
+    <link rel="icon" href="images/Amaze-favicon.png" />
+    <link rel="apple-touch-icon" href="images/apple-touch-Amaze-favicon.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
+
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="general.css" />
     <link rel="stylesheet" href="queries.css" />
+    <title>Azame</title>
   </head>
   <body>
     <header class="header">
